# Planned-Obsolescence

./: README.md
CI/: datpak.zip.md5
CI/datpak/: CMakeLists.txt  README.md
CI/datpak/CMake/: CMakeLists.txt  astyle.cmake  clang.format.cmake  itch.io.cmake
CI/datpak/Configs/: CMakeLists.txt
CI/datpak/Hooks/: CMakeLists.txt  pre-commit
CI/datpak/Tools/Cppcheck/: suppress.conf
